--- a/ins-feign/invoke-feign/src/main/resources/application.yml
+++ b/ins-feign/invoke-feign/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+feign:
+  compression:
+    request:
+      enabled: true
+      mine-types: "text/xml,application/xml,application/json"
+      min-request-size: 2048
+    response.enabled: true
 
 
 
