--- a/ins-feign/invoke-feign/src/main/resources/application.yml
+++ b/ins-feign/invoke-feign/src/main/resources/application.yml
@@ -10,4 +10,6 @@ feign:
 
 hystrix.command.default.execution:
   timeout.enabled: true
-  isolation.thread.timeoutInMilliseconds: 60000
+  isolation:
+    thread:
+      timeoutInMilliseconds: 60000
