--- a/ins-service/ins-member/member-facade/src/main/resources/application.yml
+++ b/ins-service/ins-member/member-facade/src/main/resources/application.yml
@@ -21,7 +21,6 @@ mapper:
 ## org.springframework.boot.autoconfigure.web.ServerProperties
 server.port: 9002
 
-
 spring:
   haili:
     web:
@@ -87,9 +86,29 @@ spring:
 # 注册中心地址, 多个使用 , 分隔
 register.center: http://127.0.0.1:9997/eureka
 
+
+feign:
+  compression:
+    request:
+      enabled: true
+      mime-types: ["text/xml","application/xml","application/json"]
+      min-request-size: 2048
+    response.enabled: true
+  hystrix:
+    # 在feign中开启hystrix功能，默认情况下feign不开启hystrix功能
+    enabled: true
+  ## 配置httpclient线程池
+  httpclient:
+    enabled: false
+  okhttp:
+    enabled: true
+
+
 hystrix.command.default.execution:
   timeout.enabled: true
-  isolation.thread.timeoutInMilliseconds: 60000
+  isolation:
+    thread:
+      timeoutInMilliseconds: 60000
 
 eureka:
   client:
