--- a/ins-service/ins-member/member-facade/src/main/resources/application.yml
+++ b/ins-service/ins-member/member-facade/src/main/resources/application.yml
@@ -102,7 +102,7 @@ feign:
     enabled: false
   okhttp:
     enabled: true
-
+    log.level: "BODY"
 
 hystrix.command.default.execution:
   timeout.enabled: true
