--- a/ins-gateway/api-gateway/src/main/resources/application.yml
+++ b/ins-gateway/api-gateway/src/main/resources/application.yml
@@ -83,13 +83,20 @@ feign:
     enabled: false
   okhttp:
     enabled: true
-    log.level: "NONE"
+    log.level: "HEADERS"
 
 hystrix.command.default.execution:
   timeout.enabled: true
   isolation:
     thread:
       timeoutInMilliseconds: 60000
+
+ribbon:
+  http:
+    client:
+      enabled: false
+  okhttp:
+    enabled: true
 
 # 路由
 zuul:
