--- a/ins-gateway/boms-gateway/src/main/resources/application.yml
+++ b/ins-gateway/boms-gateway/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-
+logging.config: classpath:log4j2.yml
 ## org.springframework.boot.autoconfigure.web.ServerProperties
 server:
   port: 9102
@@ -10,9 +10,7 @@ server:
 
 ##  https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 spring:
-  haili:
-    webflux:
-      filter.enabled: true
+
   application:
     name: boms-gateway
   cloud:
@@ -21,8 +19,9 @@ spring:
         locator:
           ####开启Service_id 用时需要大写service_id
           enabled: true
-
-
+          lowerCaseServiceId: true
+  main:
+    allow-bean-definition-overriding: false
 register.center: http://127.0.0.1:9997/eureka #,http://eureka2:9998/eureka,http://eureka3:9999/eureka
 
 eureka:
@@ -44,29 +43,37 @@ eureka:
     status-page-url-path: /actuator/info
     health-check-url-path: /actuator/health
 
-feign:
-  compression:
-    request:
-      enabled: true
-      mime-types: ["text/xml","application/xml","application/json"]
-      min-request-size: 2048
-    response.enabled: true
-  hystrix:
-    # 在feign中开启hystrix功能，默认情况下feign不开启hystrix功能
-    enabled: true
-  ## 配置httpclient线程池
-  httpclient:
-    enabled: false
-  okhttp:
-    enabled: true
-    log.level: "BODY"
 
-# 超时时间设置为 60 秒
+
+#feign:
+#  compression:
+#    request:
+#      enabled: true
+#      mime-types: ["text/xml","application/xml","application/json"]
+#      min-request-size: 2048
+#    response.enabled: true
+#    # 在feign中开启hystrix功能，默认情况下feign不开启hystrix功能
+#  hystrix:
+#    enabled: true
+#  ## 配置httpclient线程池
+#  httpclient:
+#    enabled: false
+#  okhttp:
+#    enabled: true
+#    log.level: "BODY"
+
 hystrix.command.default.execution:
   timeout.enabled: true
   isolation:
     thread:
       timeoutInMilliseconds: 60000
+
+ribbon:
+  http:
+    client:
+      enabled: false
+  okhttp:
+    enabled: true
 
 
 
