--- a/ins-eureka/ins-eureka-9997/src/main/resources/application.yml
+++ b/ins-eureka/ins-eureka-9997/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 
 eureka:
   server:
-    enable-self-preservation: false # 设为false，关闭自我保护
+    enable-self-preservation: true # 设为false，关闭自我保护
     eviction-interval-timer-in-ms: 4000 # 清理间隔（单位毫秒，默认是60*1000）
   instance:
     hostname: eureka1
