--- a/ins-service/ins-order-webflux/order-service/src/main/resources/application.yml
+++ b/ins-service/ins-order-webflux/order-service/src/main/resources/application.yml
@@ -23,8 +23,8 @@ server.port: 9003
 
 
 spring:
-  main:
-    allow-bean-definition-overriding: true
+#  main:
+#    allow-bean-definition-overriding: true
   # 配置下面两个值将会走到 ControllerAdvice 全局里面去
 # org.springframework.boot.autoconfigure.web.WebMvcProperties
   mvc.throw-exception-if-no-handler-found: true
