--- a/ins-commons/ins-common-mybatis-plugin/pom.xml
+++ b/ins-commons/ins-common-mybatis-plugin/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ins</groupId>
-    <artifactId>ins-mybatis-plugins</artifactId>
+    <groupId>com.ins.common.mybatis.plugin</groupId>
+    <artifactId>ins-common-mybatis-plugin</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
