--- a/ins-service/ins-member/member-dao/pom.xml
+++ b/ins-service/ins-member/member-dao/pom.xml
@@ -66,8 +66,8 @@
                         <version>8.0.13</version>
                     </dependency>
                     <dependency>
-                        <groupId>com.ins</groupId>
-                        <artifactId>ins-mybatis-plugins</artifactId>
+                        <groupId>com.ins.common.mybatis.plugin</groupId>
+                        <artifactId>ins-common-mybatis-plugin</artifactId>
                         <version>1.0-SNAPSHOT</version>
                     </dependency>
                 </dependencies>
