--- a/ins-feign/invoke-feign/pom.xml
+++ b/ins-feign/invoke-feign/pom.xml
@@ -16,8 +16,8 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.haili.ins.common</groupId>
-            <artifactId>ins-common</artifactId>
+            <groupId>com.haili.ins</groupId>
+            <artifactId>ins-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
