--- a/ins-service/ins-order-webflux/order-dao/pom.xml
+++ b/ins-service/ins-order-webflux/order-dao/pom.xml
@@ -14,8 +14,8 @@
     <modelVersion>4.0.0</modelVersion>
     <dependencies>
         <dependency>
-            <groupId>com.haili.ins.common</groupId>
-            <artifactId>ins-common</artifactId>
+            <groupId>com.haili.ins</groupId>
+            <artifactId>ins-core</artifactId>
             <version>1.0-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
