优化核心模块目录结构

--- a/ins-cores/pom.xml
+++ b/ins-cores/pom.xml
@@ -2,22 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>haili-ins</artifactId>
-        <groupId>com.haili.ins</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.haili.ins.moniter</groupId>
-    <artifactId>ins-moniter</artifactId>
+    <parent>
+        <groupId>com.haili.ins</groupId>
+        <artifactId>haili-ins</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <groupId>com.haili.ins.cores</groupId>
+    <artifactId>ins-cores</artifactId>
     <packaging>pom</packaging>
+
     <modules>
-       <module>ins-moniter-admin</module>
+        <module>ins-core</module>
+        <module>ins-invoke</module>
     </modules>
 
-    <dependencies>
-
-
-    </dependencies>
+    
 </project>
