--- a/ins-gateway/api-gateway/pom.xml
+++ b/ins-gateway/api-gateway/pom.xml
@@ -37,13 +37,9 @@
             <!--<artifactId>spring-cloud-starter-bus-amqp</artifactId>-->
         <!--</dependency>-->
 
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-data-redis</artifactId>-->
-        <!--</dependency>-->
         <dependency>
-            <groupId>com.haili.ins.common</groupId>
-            <artifactId>ins-common</artifactId>
+            <groupId>com.haili.ins.cores</groupId>
+            <artifactId>ins-core</artifactId>
             <version>1.0-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
