--- a/ins-service/ins-auth/auth-dao/pom.xml
+++ b/ins-service/ins-auth/auth-dao/pom.xml
@@ -13,8 +13,8 @@
     <artifactId>auth-dao</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.haili.ins</groupId>
-            <artifactId>ins-core</artifactId>
+            <groupId>com.haili.ins.cores</groupId>
+            <artifactId>ins-invoke</artifactId>
             <version>1.0-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
