--- a/ins-service/ins-auth/auth-oauth2-service/pom.xml
+++ b/ins-service/ins-auth/auth-oauth2-service/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.3.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
