--- a/ins-service/ins-auth/auth-oauth2-jwt-service/pom.xml
+++ b/ins-service/ins-auth/auth-oauth2-jwt-service/pom.xml
@@ -37,6 +37,10 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.3.4.RELEASE</version>
