封装redisTemplate使用,封装redisson 加锁

--- a/ins-service/ins-auth/auth-oauth2-jwt-service/src/main/resources/application.yml
+++ b/ins-service/ins-auth/auth-oauth2-jwt-service/src/main/resources/application.yml
@@ -113,7 +113,7 @@ feign:
     enabled: false
   okhttp:
     enabled: true
-    log.level: "BODY"
+    log.level: "HEADERS"
 
 hystrix.command.default.execution:
   timeout.enabled: true
