--- a/ins-message/ins-message-service/ins-rabbitmq/src/main/resources/rabbitmq.yml
+++ b/ins-message/ins-message-service/ins-rabbitmq/src/main/resources/rabbitmq.yml
@@ -1,11 +1,29 @@
 
 spring:
-  #配置rabbitmq的主机
   rabbitmq:
-    host: 192.168.18.133
-  #访问端口
+    #配置rabbitmq的主机
+    host: 47.100.3.157
+    #访问端口
     port: 5672
-  #安装RabbitMQ时配置的用户名
+    #安装RabbitMQ时配置的用户名
     username: root
-  #安装RabbitMQ时配置的密码
+    #安装RabbitMQ时配置的密码
     password: 123456
+    #消息发送到交换机确认机制,是否确认回调
+    publisher-confirms: true
+    #消息发送到交换机确认机制,是否返回回调
+    publisher-returns: true
+    listener:
+      simple:
+        #采用手动应答
+        acknowledge-mode: manual
+        #指定最小消费者数量
+        concurrency: 1
+        #指定最大消费者数量
+        max-concurrency: 1
+        retry:
+          #是否支持重试
+          enabled: true
+      direct:
+        acknowledge-mode: manual
+    connection-timeout: 50000
