--- a/ins-service/ins-order-webflux/order-service/src/main/resources/application.yml
+++ b/ins-service/ins-order-webflux/order-service/src/main/resources/application.yml
@@ -42,7 +42,7 @@ spring:
   # 当前服务名
   application.name: order-server
   datasource:
-    url:  jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url:  jdbc:mysql://localhost:3306/order?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
     userName: root
     password: 111111
     type: com.zaxxer.hikari.HikariDataSource
@@ -57,6 +57,33 @@ spring:
       connection-timeout: 30000
       connection-test-query: SELECT 1
 
+  rabbitmq:
+    #配置rabbitmq的主机
+    host: 47.100.3.157
+    #访问端口
+    port: 5672
+    #安装RabbitMQ时配置的用户名
+    username: root
+    #安装RabbitMQ时配置的密码
+    password: 123456
+    #消息发送到交换机确认机制,是否确认回调
+    publisher-confirms: true
+    #消息发送到交换机确认机制,是否返回回调
+    publisher-returns: true
+    listener:
+      simple:
+        #采用手动应答
+        acknowledge-mode: manual
+        #指定最小消费者数量
+        concurrency: 1
+        #指定最大消费者数量
+        max-concurrency: 1
+        retry:
+          #是否支持重试
+          enabled: true
+      direct:
+        acknowledge-mode: manual
+    connection-timeout: 50000
 
 # 注册中心地址, 多个使用 , 分隔
 register.center: http://127.0.0.1:9997/eureka/
@@ -76,7 +103,7 @@ feign:
     enabled: false
   okhttp:
     enabled: true
-    log.level: "BODY"
+    log.level: "HEADERS"
 
 hystrix.command.default.execution:
   timeout.enabled: true
@@ -100,3 +127,22 @@ eureka:
     lease-expiration-duration-in-seconds: 10
     preferIpAddress: true
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
+
+###自定义的 rabbitMq 属性
+mq:
+  retry:
+    count: 5
+  message:
+    exchange:
+      name: "test-send-award-exchange"
+      queue:
+        name: "test-send-coupon-queue"
+      routing-key:
+        name: "test-routing-key-send-coupon"
+    dead:
+      exchange:
+        name: "test-dead-queue-exchange"
+        queue:
+          name: "test-dead-queue"
+        routing-key:
+          name: "test-routing-key-dead-queue"
