--- a/ins-service/ins-order-webflux/order-service/pom.xml
+++ b/ins-service/ins-order-webflux/order-service/pom.xml
@@ -32,12 +32,12 @@
             <artifactId>ins-rabbitmq</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
