--- a/ins-data/ins-file/ins-aliyun-oss/pom.xml
+++ b/ins-data/ins-file/ins-aliyun-oss/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>com.haili.ins.data.file</groupId>
-    <artifactId>ins-ucloud-file</artifactId>
+    <artifactId>ins-aliyun-oss</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     
