--- a/ins-data/ins-file/pom.xml
+++ b/ins-data/ins-file/pom.xml
@@ -15,8 +15,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>ins-aliyun-file</module>
-        <module>ins-ucloud-file</module>
+        <module>ins-aliyun-oss</module>
     </modules>
     
 </project>
