--- a/ins-message/ins-notification/ins-sms/ins-aliyun-sms/pom.xml
+++ b/ins-message/ins-notification/ins-sms/ins-aliyun-sms/pom.xml
@@ -6,15 +6,13 @@
 
     <parent>
         <groupId>com.haili.ins.message</groupId>
-        <artifactId>ins-notification</artifactId>
+        <artifactId>ins-sms</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.haili.ins.message</groupId>
-    <artifactId>ins-sms</artifactId>
+    <artifactId>ins-aliyun-sms</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>ins-aliyun-sms</module>
-    </modules>
+
+    
 </project>
