--- a/ins-service/ins-account-service/pom.xml
+++ b/ins-service/ins-account-service/pom.xml
@@ -15,7 +15,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-
+        <module>ins-account</module>
     </modules>
     
 </project>
