--- a/ins-service/ins-member-service/ins-auth/auth-dao/src/main/resources/jdbc.properties
+++ b/ins-service/ins-member-service/ins-auth/auth-dao/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 # mapper xml 文件地址
 mybatis.mapper-locations=classpath*:mybatis/*Mapper.xml
 ##数据库url
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/auth?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
 ##数据库用户名
 spring.datasource.username=root
 ##数据库密码
