--- a/ins-service/ins-member-service/ins-auth/auth-oauth2-jwt-service/pom.xml
+++ b/ins-service/ins-member-service/ins-auth/auth-oauth2-jwt-service/pom.xml
@@ -70,16 +70,16 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>Semantic-UI</artifactId>
-            <version>2.4.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>jquery</artifactId>
-            <version>3.3.1-1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.webjars</groupId>-->
+            <!--<artifactId>Semantic-UI</artifactId>-->
+            <!--<version>2.4.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.webjars</groupId>-->
+            <!--<artifactId>jquery</artifactId>-->
+            <!--<version>3.3.1-1</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
