--- a/ins-service/ins-member-service/ins-member/member-dao/src/main/resources/jdbc.properties
+++ b/ins-service/ins-member-service/ins-member/member-dao/src/main/resources/jdbc.properties
@@ -1,15 +1,15 @@
-## mapper xml 文件地址
+## mapper xml \uFFFD\u013C\uFFFD\uFFFD\uFFFD\u05B7
 mybatis.mapper-locations=classpath*:mybatis/*Mapper.xml
-##数据库url
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
-##数据库用户名
+##\uFFFD\uFFFD\uFFFD\u077F\uFFFDurl
+spring.datasource.url=jdbc:mysql://localhost:3306/member?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+##\uFFFD\uFFFD\uFFFD\u077F\uFFFD\uFFFD\u00FB\uFFFD\uFFFD\uFFFD
 spring.datasource.username=root
-##数据库密码
+##\uFFFD\uFFFD\uFFFD\u077F\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 spring.datasource.password=111111
-##数据库驱动
+##\uFFFD\uFFFD\uFFFD\u077F\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Mybatis Generator configuration
-#dao类和实体类的位置
+#dao\uFFFD\uFFFD\uFFFD\u02B5\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u03BB\uFFFD\uFFFD
 mybatis.project =src/main/java
-#mapper文件的位置
+#mapper\uFFFD\u013C\uFFFD\uFFFD\uFFFD\u03BB\uFFFD\uFFFD
 mybatis.resources=src/main/resources
