增加区块链服务

--- a/ins-service/pom.xml
+++ b/ins-service/pom.xml
@@ -54,6 +54,7 @@
 
         <module>ins-statistics-service</module><!--统计服务-->
 
+        <module>ins-block-service</module><!--区块链服务-->
 
     </modules>
     <dependencies>
