--- a/ins-service/ins-account-service/ins-account/pom.xml
+++ b/ins-service/ins-account-service/ins-account/pom.xml
@@ -30,6 +30,21 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.haili.ins.feign</groupId>
+            <artifactId>invoke-feign</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.haili.ins.message</groupId>
+            <artifactId>ins-redis</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.haili.ins.message</groupId>
+            <artifactId>ins-rabbitmq</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
