--- a/ins-service/ins-member-service/ins-auth/auth-oauth2-jwt-service/src/main/resources/application.yml
+++ b/ins-service/ins-member-service/ins-auth/auth-oauth2-jwt-service/src/main/resources/application.yml
@@ -28,9 +28,9 @@ spring:
   resources.add-mappings: false
 #####数据库配置
   datasource:
-    url: jdbc:mysql://localhost:3306/auth?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://47.100.3.157:3306/oauth?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
     userName: root
-    password: 111111
+    password: 123456
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
