自定义zuul errorfilter 错误返回

--- a/ins-service/ins-account-service/ins-txncore/src/main/resources/application.yml
+++ b/ins-service/ins-account-service/ins-txncore/src/main/resources/application.yml
@@ -113,7 +113,7 @@ hystrix.command.default.execution:
   timeout.enabled: true
   isolation:
     thread:
-      timeoutInMilliseconds: 60000
+      timeout-in-milliseconds: 60000
 
 
 #apollo:
