--- a/ins-config/pom.xml
+++ b/ins-config/pom.xml
@@ -11,35 +11,14 @@
 
     <groupId>com.haili.ins</groupId>
     <artifactId>ins-config</artifactId>
-
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.tmatesoft.svnkit</groupId>
-            <artifactId>svnkit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
+
     </dependencies>
 
     <build>
-        <finalName>ins-config-8001</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>com.haili.ins.config.ConfigServerApplication</mainClass>
-                </configuration>
-            </plugin>
-        </plugins>
+
     </build>
 
 </project>
