--- a/ins-gateway/boms-gateway/src/main/resources/bootstrap.yml
+++ b/ins-gateway/boms-gateway/src/main/resources/bootstrap.yml
@@ -66,4 +66,4 @@ hystrix.command.default.execution:
   timeout.enabled: true
   isolation:
     thread:
-      timeoutInMilliseconds: 60000
+      timeout-in-milliseconds: 60000
