--- a/ins-message/ins-message-service/ins-rocketmq/pom.xml
+++ b/ins-message/ins-message-service/ins-rocketmq/pom.xml
@@ -14,5 +14,11 @@
     <artifactId>ins-rocketmq</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>4.5.0</version>
+        </dependency>
+    </dependencies>
 </project>
