--- a/ins-message/ins-notification/ins-sms/ins-aliyun-sms/pom.xml
+++ b/ins-message/ins-notification/ins-sms/ins-aliyun-sms/pom.xml
@@ -14,5 +14,11 @@
     <artifactId>ins-aliyun-sms</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <dependencies>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+            <version>4.3.9</version>
+        </dependency>
+    </dependencies>
 </project>
