--- a/ins-moniter/ins-moniter-admin/pom.xml
+++ b/ins-moniter/ins-moniter-admin/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>ins-moniter-admin</artifactId>
     <packaging>jar</packaging>
     <properties>
-        <spring-boot-admin.version>2.1.2</spring-boot-admin.version>
+        <spring-boot-admin.version>2.1.3</spring-boot-admin.version>
     </properties>
     <dependencies>
         <dependency>
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>de.codecentric</groupId>
-            <artifactId>spring-boot-admin-starter-server</artifactId>
+            <artifactId>spring-boot-admin-server</artifactId>
             <version>${spring-boot-admin.version}</version>
             <exclusions>
                 <exclusion>
@@ -32,6 +32,11 @@
                     <artifactId>spring-boot-starter-logging</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-server-ui</artifactId>
+            <version>${spring-boot-admin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
