--- a/ins-service/ins-member-service/ins-auth/auth-oauth2-jwt-service/src/main/resources/bootstrap.yml
+++ b/ins-service/ins-member-service/ins-auth/auth-oauth2-jwt-service/src/main/resources/bootstrap.yml
@@ -95,4 +95,4 @@ hystrix.command.default.execution:
   timeout.enabled: true
   isolation:
     thread:
-      timeoutInMilliseconds: 60000
+      timeout-in-milliseconds: 60000
