--- a/ins-thirdparty/pom.xml
+++ b/ins-thirdparty/pom.xml
@@ -16,5 +16,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>ins-weixin</module>
+        <module>ins-alipay</module>
+        <module>ins-weibo</module>
     </modules>
 </project>
