--- a/pom.xml
+++ b/pom.xml
@@ -37,22 +37,35 @@
         <spring-cloud-alibaba.version>0.2.1.RELEASE</spring-cloud-alibaba.version>
         <joda.version>2.10.1</joda.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
-        <commons-codec.version>1.11</commons-codec.version>
-        <commons-fileupload.version>1.3.3</commons-fileupload.version>
-        <guava.version>27.0-jre</guava.version>
-        <lombok.version>1.18.4</lombok.version>
-        <jackson.version>2.9.7</jackson.version>
-        <fastjson.version>1.2.54</fastjson.version>
+        <commons-codec.version>1.12</commons-codec.version>
+        <commons-fileupload.version>1.4</commons-fileupload.version>
+        <guava.version>27.1-jre</guava.version>
+        <lombok.version>1.18.6</lombok.version>
+        <jackson.version>2.9.8</jackson.version>
+        <fastjson.version>1.2.56</fastjson.version>
         <gson.version>2.8.5</gson.version>
-        <hikaricp.version>3.2.0</hikaricp.version>
-        <mysql.version>8.0.13</mysql.version>
-        <mybatis.version>3.4.6</mybatis.version>
-        <mybatis-spring.version>1.3.2</mybatis-spring.version>
-        <tk.mybatis.version>2.1.0</tk.mybatis.version>
+        <hikaricp.version>3.3.1</hikaricp.version>
+        <mysql.version>8.0.15</mysql.version>
+        <mybatis.version>3.5.0</mybatis.version>
+        <mybatis-spring.version>2.0.0</mybatis-spring.version>
+        <tk.mybatis.version>2.1.5</tk.mybatis.version>
         <pagehelper-spring.version>1.2.10</pagehelper-spring.version>
-
-
+        <snakeyaml.version>1.24</snakeyaml.version>
+        <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
+        <httpclient.version>4.5.8</httpclient.version>
+        <httpmime.version>4.5.8</httpmime.version>
+        <httpcore.version>4.4.11</httpcore.version>
+        <httpasyncclient.version>4.1.4</httpasyncclient.version>
+        <httpcore-nio.version>4.4.11</httpcore-nio.version>
+        <okhttp3.version>3.14.0</okhttp3.version>
+        <hibernate-validator.version>6.1.0.Alpha4</hibernate-validator.version>
+        <validation-api.version>2.0.1.Final</validation-api.version>
+        <javax.el.version>3.0.1-b11</javax.el.version>
+        <swagger2.version>2.9.2</swagger2.version>
+        <zxing.version>3.3.3</zxing.version>
+        <auth0.jwt.version>3.8.0</auth0.jwt.version>
     </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
